# enigma-core

./: .drone.yml  .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  LICENSE  Makefile  README.md  base.Dockerfile  build_base_image.sh  build_core_hw_image.sh  build_core_sw_image.sh  build_km_hw_image.sh  build_km_sw_image.sh  clone.Dockerfile  core.Dockerfile  execute_core.sh  execute_file_generator.sh  execute_km.sh  km-reginfo.sh  km.Dockerfile  rust-toolchain  worker-reginfo.sh
app/: .Cargo.toml.swp  Cargo.toml  Enclave_u.c  Enclave_u.h
app/src/: main.rs
app/src/esgx/: equote.rs  estorage.rs  general.rs  mod.rs
app/src/evm_u/: evm.rs
app/src/networking/: constants.rs  mod.rs  surface_server.rs
app/tests/: quote_test.rs
enclave/: Cargo.toml  Enclave.edl  Enclave_t.c  Enclave_t.h
enclave/src/: evm_t.rs  lib.rs  ocalls_t.rs  quote_t.rs  storage_t.rs
enclave/src/common/: utils_t.rs
enclave/src/cryptography/: assymetric.rs  mod.rs  symmetric.rs
enclave/src/cryptography_t/: assymetric.rs
eng-wasm/: Cargo.toml
eng-wasm/derive/: .rustfmt.toml  Cargo.toml
eng-wasm/derive/examples/: struct-impl.rs  trait-impl-rename.rs  trait-impl.rs
eng-wasm/derive/src/: errors.rs  eth_contract.rs  ethereum.rs  into_ident.rs  lib.rs  pub_interface.rs  reduce_mut.rs
eng-wasm/derive/src/eth_contract/: errors.rs  ethereum.rs
eng-wasm/derive/src/pub_interface/: parse_signatures.rs
eng-wasm/dispatch/: Cargo.toml
eng-wasm/src/: crypto_wasm.rs  eng_wasm_errors.rs  ethereum.rs  internal_std.rs  lib.rs  rand_wasm.rs
eng_wasm/: Cargo.toml
eng_wasm/derive/: Cargo.toml
eng_wasm/derive/src/: lib.rs
eng_wasm/dispatch/: Cargo.toml
eng_wasm/dispatch/src/: lib.rs
eng_wasm/src/: ethereum.rs  internal_std.rs  lib.rs  rand_wasm.rs
enigma-core/app/: CHANGELOG.md  Cargo.toml  build.rs
enigma-core/app/cross-test-utils/: Cargo.toml
enigma-core/app/cross-test-utils/src/: lib.rs
enigma-core/app/src/: auto_ffi.rs  cli.rs  ipc_test.rs  km_u.rs  lib.rs  logging.rs  main.rs
enigma-core/app/src/common_u/: errors.rs
enigma-core/app/src/db/: dal.rs  iterator.rs  mod.rs  primitives.rs
enigma-core/app/src/esgx/: equote.rs  general.rs  mod.rs  ocalls_u.rs  quote_utils.rs
enigma-core/app/src/evm_u/: evm.rs
enigma-core/app/src/networking/: attestation_service.rs  constants.rs  ipc_listener.rs  messages.rs  mod.rs  surface_server.rs
enigma-core/app/src/wasm_u/: mod.rs  wasm.rs
enigma-core/app/tests/: integration_utils.rs  ipc_all_addrs_test.rs  ipc_all_tips_test.rs  ipc_computation_tests.rs  ipc_get_contract_test.rs  ipc_get_delta_test.rs  ipc_get_deltas_test.rs  ipc_get_tip_test.rs  ipc_get_tips_test.rs  ipc_identity_and_general_tests.rs  ipc_key_exchange_tests.rs  ipc_read_db_tests.rs  ipc_test.rs  ipc_update_contract_test.rs  ipc_update_deltas_test.rs  ipc_write_db_tests.rs
enigma-core/app/tests/integration_utils/: mod.rs
enigma-core/app/tests/surface_listener/: message_type.definition  surface_client.py
enigma-core/enclave/: CHANGELOG.md  Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile
enigma-core/enclave/src/: auto_ffi.rs  lib.rs  ocalls_t.rs  quote_t.rs
enigma-core/enclave/src/evm_t/: abi.rs  error.rs  evm.rs  evm_t.rs  mod.rs  rlp.rs
enigma-core/enclave/src/km/: db.rs
enigma-core/enclave/src/km_t/: db.rs  mod.rs  principal.rs  users.rs
enigma-core/enclave/src/wasm_g/: eng_resolver.rs  eng_runtime.rs  execution.rs  mod.rs
enigma-crypto/: Cargo.toml
enigma-crypto/src/: asymmetric.rs  error.rs  hash.rs  hashing.rs  lib.rs  rand.rs  symmetric.rs
enigma-principal/app/: CHANGELOG.md  Cargo.toml  README.md  build.rs
enigma-principal/app/src/: logging.rs  main.rs
enigma-principal/app/src/boot_network/: config.json  deploy_scripts.rs  enigma.abi  enigma_contract.rs  enigma_full.abi  epoch_provider.rs  keys_provider_http.rs  mod.rs  principal.config  principal_keystore.rs  principal_manager.rs  principal_server.rs  principal_utils.rs  registration.rs  setup_env.rs
enigma-principal/app/src/cli/: app.rs  (+2 more)
enigma-principal/enclave/: CHANGELOG.md  Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile  Xargo.toml
enigma-principal/enclave/src/: lib.rs  ocalls_t.rs
enigma-runtime-t/: Cargo.toml
enigma-runtime-t/src/: eng_resolver.rs  gas.rs  lib.rs  ocalls_t.rs  wasm_execution.rs
enigma-runtime-t/src/data/: delta.rs  mod.rs  state.rs
enigma-runtime-t/src/state/: mod.rs
enigma-runtime-t/tests/: prize.json
enigma-tools-m/: Cargo.toml
enigma-tools-m/src/: keeper_types.rs  lib.rs
enigma-tools-m/src/common/: errors.rs  mod.rs  utils.rs
enigma-tools-m/src/primitives/: km_primitives.rs  mod.rs  serde_impls.rs
enigma-tools-t/: Cargo.toml
enigma-tools-t/src/: document_storage_t.rs  km_primitives.rs  lib.rs  macros.rs  quote_t.rs  storage_t.rs
enigma-tools-t/src/build_arguments_g/: mod.rs  rlp.rs
enigma-tools-t/src/common/: errors_t.rs  mod.rs  utils_t.rs
enigma-tools-t/src/cryptography_t/: assymetric.rs  asymmetric.rs  mod.rs  symmetric.rs
enigma-tools-t/src/esgx/: mod.rs  ocalls_t.rs
enigma-tools-t/src/eth_tools_t/: epoch_t.rs  eth_verify_t.rs  keeper_types_t.rs  mod.rs  verifier_t.rs  verify_t.rs
enigma-tools-u/: Cargo.toml  build.rs
enigma-tools-u/src/: lib.rs
enigma-tools-u/src/attestation_service/: constants.rs  mod.rs  service.rs
enigma-tools-u/src/common_u/: errors.rs  logging.rs  mod.rs  os.rs  utils_u.rs
enigma-tools-u/src/esgx/: equote.rs  general.rs  mod.rs  ocalls_u.rs
enigma-tools-u/src/web3_utils/: contract_ext.rs  enigma_contract.rs  keeper_types_u.rs  mod.rs  provider_types.rs  raw_transaction.rs  type_wrappers_t.rs  w3utils.rs
enigma-types/: Cargo.toml  build.rs
enigma-types/src/: hash.rs  lib.rs  traits.rs  types.rs
examples/eng_wasm_contracts/contract_with_eth_calls/: Cargo.toml  Test.json
examples/eng_wasm_contracts/encryption/: Cargo.toml
examples/eng_wasm_contracts/erc20/: Cargo.toml
examples/eng_wasm_contracts/simple_addition/: Cargo.toml
examples/eng_wasm_contracts/simplest/: Cargo.toml  contract.wasm
examples/eng_wasm_contracts/voting_demo/: Cargo.toml  VotingETH.json
(+103 files in other folders)
