[package]
name = "Helloworldsampleenclave"
version = "0.9.8"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "/root/sgx/sgx_types" }
sgx_tstd = { path = "/root/sgx/sgx_tstd" }
sgx_trts = {path = "/root/sgx/sgx_trts"}
sgx_tse = { path = "/root/sgx/sgx_tse"}
sputnikvm = { path = "../sputnikvm", default-features = false }
etcommon-hexutil = {path = "../thirdparties/etcommon-rs/hexutil", default-features = false}
etcommon-bigint = {path = "../thirdparties/etcommon-rs/bigint", default-features = false, features = ["rlp"] }
sputnikvm-network-classic = { path = "../sputnikvm/network/classic", default-features = false }
