[package]
name = "Helloworldsampleenclave"
version = "0.9.8"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies.sgx_types]
git = "https://github.com/baidu/rust-sgx-sdk.git"
rev = "v1.0.0"

[target.'cfg(not(target_env = "sgx"))'.dependencies.sgx_tstd]
git = "https://github.com/baidu/rust-sgx-sdk.git"
rev = "v1.0.0"

[target.'cfg(not(target_env = "sgx"))'.dependencies.sgx_trts]
git = "https://github.com/baidu/rust-sgx-sdk.git"
rev = "v1.0.0"

# quote 
[target.'cfg(not(target_env = "sgx"))'.dependencies.sgx_tse]
git = "https://github.com/baidu/rust-sgx-sdk.git"
rev = "v1.0.0"

# no real reason added while debugging create_report
[target.'cfg(not(target_env = "sgx"))'.dependencies.sgx_tdh]
git = "https://github.com/baidu/rust-sgx-sdk.git"
rev = "v1.0.0"

[target.'cfg(not(target_env = "sgx"))'.dependencies.sgx_tservice]
git = "https://github.com/baidu/rust-sgx-sdk.git"
rev = "v1.0.0"


[target.'cfg(not(target_env = "sgx"))'.dependencies.sgx_alloc]
git = "https://github.com/baidu/rust-sgx-sdk.git"
rev = "v1.0.0"

# sealing testing not all required. 
[target.'cfg(not(target_env = "sgx"))'.dependencies.sgx_tseal]
git = "https://github.com/baidu/rust-sgx-sdk.git"
rev = "v1.0.0"
# delete rand 
[target.'cfg(not(target_env = "sgx"))'.dependencies.sgx_rand]
git = "https://github.com/baidu/rust-sgx-sdk.git"
rev = "v1.0.0"
# end of sealing

[dependencies]
etcommon-hexutil = {path = "../thirdparties/etcommon-rs/hexutil", default-features = false}
etcommon-bigint = {path = "../thirdparties/etcommon-rs/bigint", default-features = false, features = ["rlp"] }
sputnikvm-network-classic = { path = "../sputnikvm/network/classic", default-features = false }
sputnikvm = { path = "../sputnikvm", default-features = false }
