[package]
name = "eng-wasm"
version = "0.1.3"
authors = ["moria <moria@enigma.co>"]
repository = "https://github.com/enigmampc/enigma-core/tree/develop/eng-wasm"
license = "AGPL-3.0"
description = "Enigma library for creating Secret Contracts"
keywords = ["wasm", "webassembly", "blockchain", "sgx", "enigma"]
exclude = ["derive/*"]
categories = ["wasm"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", default-features = false }
eng-pwasm-abi = "0.3"