cargo-features = ["rename-dependency"]

[package]
name = "enigma-crypto"
version = "0.1.0"
authors = ["Elichai Turkel <elichai@enigma.co>"]
edition = "2018"
description = "A Cryptography library used for easy usage in the Enigma Protocol."

[dependencies]
rustc-hex = { version = "2.0.1", default-features = false }
tiny-keccak = "1.4"
ring = { git = "https://github.com/elichai/ring.git", rev = "sgx-manual", default-features = false }
libsecp256k1 = "0.2"
failure = { version = "0.1", default-features = false, features = ["derive"] }

byteorder_std = { package = 'byteorder', version = "1.3", optional = true }
byteorder_sgx = { package = 'byteorder', git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.4", optional = true }


sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.4", optional = true }
sgx_trts = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.4", optional = true }

[features]
default = ["std"]
std = ["ring/default", "byteorder_std"]
sgx = ["ring/sgx", "sgx_trts", "sgx_tstd", "byteorder_sgx"]
