[package]
name = "enigma-runtime-t"
version = "0.3.0"
authors = ["Elichai Turkel <elichai@enigma.co>"]

[dependencies]
enigma-types = { path = "../enigma-types", default-features = false, features = ["sgx"] }
enigma-crypto = { path = "../enigma-crypto", default-features = false, features = ["sgx", "asymmetric"] }
enigma-tools-t = { path = "../enigma-tools-t" }

rmp-serde = { git = "https://github.com/enigmampc/msgpack-rust.git", rev =  "0.14.0-sgx-1.1.0" }
json-patch = { git = "https://github.com/enigmampc/json-patch.git", rev = "0.2.5-sgx-1.1.0" }
serde_json = { git = "https://github.com/enigmampc/serde-json-sgx.git", rev = "1.0.40-sgx-1.1.0" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", rev = "sgx_1.1.0", default-features = false, features=["serde_derive"] }
wasmi = { git = "https://github.com/enigmampc/wasmi", rev = "0.4.5-sgx-1.1.0" }
pwasm-utils = { git = "https://github.com/enigmampc/wasm-utils.git", rev = "0.5.0-sgx-1.1.0", default-features = false }
parity-wasm = { git = "https://github.com/enigmampc/parity-wasm.git", branch = "enigma", default-features = false }

sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.0" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.0" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.0" }