[package]
name = "enigma-tools-t"
version = "0.1.3"
authors = ["Elichai-Turkel <elichai@enigma.co>"]
description = "Tools used by the trusted part of the Enigma core and Principal node."

[dependencies]
enigma-types = { path = "../enigma-types", default-features = false, features = ["sgx"] }
enigma-tools-m = { path = "../enigma-tools-m", default-features = false, features = ["sgx"] }
enigma-crypto = { path = "../enigma-crypto", default-features = false, features = ["sgx", "asymmetric"] }

failure = { version = "0.1", default-features = false, features = ["derive"] }
etcommon-rlp = {version = "0.2", default-features = false}
etcommon-hexutil = { version = "0.2", default-features = false }
etcommon-bigint = { version = "0.2", default-features = false, features = ["rlp"] }
rustc-hex = { version = "2.0", default-features = false }

parity-wasm = { git = "https://github.com/enigmampc/parity-wasm.git", branch = "enigma", default-features = false }
pwasm-utils = { git = "https://github.com/enigmampc/wasm-utils.git", rev = "0.2.0-sgx-1.0.8", default-features = false }

rmp-serde = { git = "https://github.com/enigmampc/msgpack-rust.git", rev =  "0.6.0-sgx-1.0.8" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", rev = "407aaaa2558dda5c2367d57ba40324c52cf9acc2", default-features = false, features=["serde_derive"] }
json-patch = { git = "https://github.com/enigmampc/json-patch.git", rev = "0.2.5-sgx-1.0.8", default-features = false }
wasmi = { git = "https://github.com/enigmampc/wasmi", rev = "0.4.2-sgx-1.0.8" }
serde_json = { git = "https://github.com/enigmampc/serde-json-sgx.git", rev = "1.0.39-sgx-1.0.8" }

sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.8" }
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.8" }
sgx_trts = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.8" }
sgx_tse = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.8" }
sgx_tseal = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.8" }
