[package]
name = "enigma-tools-u"
version = "0.1.3"
authors = ["Isan-Rivkin <isan@enigma.co>"]
description = "Tools used by the untrusted part of the Enigma core and Principal node."
build = "build.rs"

[dependencies]
enigma-crypto = { path = "../enigma-crypto" }

serde_json = "1.0"
serde = { version = "1.0", default-features = false, features=["serde_derive"] }
failure = "0.1.3"
reqwest = "0.9.5"
etcommon-rlp = { version = "0.2.4", default-features = false }
base64 = "0.10.0"
openssl = "0.10"
rustc-hex = "1.0.0" # 2.0.1?
log = "0.4"
log-derive = "0.2.0"
unicase = "=2.2.0"

# TODO: Change after a new version is released.
# Add more transport layers via features if needed.
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", default-features = false, features=["http"] }


sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.4" }
sgx_urts = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.4" }
