
[package]
name = "enigma-types"
version = "0.1.0"
authors = ["Elichai Turkel <elichai@enigma.co>"]
edition = "2018"
categories = ["no-std"]

[dependencies]
rustc-hex = { version = "2.0.1", default-features = false }
arrayvec = { version = "0.4.10", default-features = false }
serde_sgx = { package = "serde", git = "https://github.com/mesalock-linux/serde-sgx.git", rev = "407aaaa2558dda5c2367d57ba40324c52cf9acc2", optional = true }
serde_std = { package = "serde", version = "1.0", default-features = false }

[build-dependencies]
cbindgen = "0.8"

[features]
default = ["std"]
std = ["serde_std/std"]
alloc = ["serde_std/alloc"]
sgx = ["serde_sgx"]
