[package]
name = "eng-wasm-derive"
version = "0.1.2"
authors = ["moria <moria@enigma.co>"]
license = "AGPL-3.0"
description = "Enigma library for creating Secret Contracts"
keywords = ["wasm", "webassembly", "blockchain", "sgx", "enigma"]
categories = ["wasm"]

[dependencies]
eng-wasm = { version = "0.1.2", path = "../" }
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["full"] }
#syn = { version = "0.15", features = ["full", "extra-traits"] } # for debug purposes
ethabi = "6.1"

[lib]
proc-macro = true
