[package]
name = "eng-wasm-derive"
version = "0.1.6" # upgrade version in eng-wasm dependancy as well (if needed)
authors = ["moria <moria@enigma.co>"]
license = "AGPL-3.0"
description = "Enigma library for creating Secret Contracts"
keywords = ["wasm", "webassembly", "blockchain", "sgx", "enigma"]
categories = ["wasm"]

[dependencies]
eng-wasm = { version = "0.1.6", path = "../" }
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["full"] }
#syn = { version = "0.15", features = ["full", "extra-traits"] } # for debug purposes
failure = { version = "0.1.5", default-features = false, features = ["derive"] }
ethabi = "6.1"
serde_json = "1.0"
tiny-keccak = "1.4"

[lib]
proc-macro = true
