[package]
name = "eng-wasm-derive"
version = "0.1.7"
authors = ["moria <moria@enigma.co>", "Reuven Podmazo <reuven@enigma.co>"]
edition = "2018"
license = "AGPL-3.0"
description = "Enigma library for creating Secret Contracts"
keywords = ["wasm", "webassembly", "blockchain", "sgx", "enigma"]
categories = ["wasm"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
failure = "0.1"
parse-display = "0.1"
ethabi = "6.1"
serde_json = "1.0"
tiny-keccak = "1.4"

[dev-dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
eng-wasm = { path = '..', version = "0.1" }

[[example]]
name = 'struct-impl'
crate-type = ["cdylib"]

[[example]]
name = 'trait-impl'
crate-type = ["cdylib"]

[[example]]
name = 'trait-impl-rename'
crate-type = ["cdylib"]
