[package]
name = "enigma-core-app"
version = "0.1.3"
authors = ["Enigma <support@enigma.co>"]
build = "build.rs"

[dependencies]
enigma-tools-u = {path = "../../enigma-tools-u"}
enigma-types = { path = "../../enigma-types" }
enigma-crypto = { path = "../../enigma-crypto" }
futures = { version = "0.1.25", default-features = false }
tokio-zmq = "0.9.0"
zmq = "0.9.0"
serde_json = "1.0"
serde = { version = "1.0", default-features = false, features=["serde_derive"] }
rmp-serde = { git = "https://github.com/3Hren/msgpack-rust.git" } # This is because of a bug of incompatibility https://github.com/3Hren/msgpack-rust/issues/189
failure = "0.1.3"
rustc-hex = "1.0.0" # 2.0.1?
dirs = "1.0.4"
# TODO: Add compression as a feature and use it in `set_compression_type()`
rocksdb = { version = "=0.12.1", default-features = false } # TODO: Update the rocksdb lib https://github.com/rust-rocksdb/rust-rocksdb/issues/304
lazy_static = "1.2.0"
lru-cache = "0.1.1"
log = "0.4.6"
log-derive = "0.2"
simplelog = "0.5.3"
structopt = "0.2"


sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.4" }
sgx_urts = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.4" }

[dev-dependencies]
ethabi = "6.1.0"
cross-test-utils = { path = "cross-test-utils" }
regex = "1"
rand = "0.6.5"
tempfile = "3.0"
itertools = "0.8"