[package]
name = "enigma-core-app"
version = "0.3.0"
authors = ["Enigma <support@enigma.co>"]
build = "build.rs"

[dependencies]
enigma-tools-u = {path = "../../enigma-tools-u"}
enigma-tools-m = {path = "../../enigma-tools-m"}
enigma-types = { path = "../../enigma-types", features = ["std"] }
enigma-crypto = { path = "../../enigma-crypto" }
futures = { version = "0.1.25", default-features = false }
tokio-zmq = "0.9.0"
zmq = "0.9.0"
serde_json = "1.0"
serde = { version = "1.0", default-features = false, features=["serde_derive"] }
serde_repr = "0.1"
rmp-serde = "0.14.0"
failure = "0.1.3"
rustc-hex = "1.0.0" # 2.0.1?
dirs = "1.0.4"
# TODO: Add compression as a feature and use it in `set_compression_type()`
rocksdb = { version = "0.12.4", default-features = false }
lazy_static = "1.3.0"
lru-cache = "0.1.1"
log = "0.4.6"
log-derive = "0.3"
log4rs = { version = "0.9.0", features=["all_components"]}
structopt = "0.2"

sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }
sgx_urts = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }

[dev-dependencies]
ethabi = "8.0.1"
cross-test-utils = { path = "cross-test-utils" }
regex = "1"
rand = "0.6.5"
tempfile = "3.0"
itertools = "0.8"

[build-dependencies]
bindgen = "0.50.0"
dirs = "1.0"
